AuctionHouse_WebApplication/src/main/java/com/example/auctionhouse_webapplication/error/InvalidBidException.java
package com.example.auctionhouse_webapplication.error;

public class InvalidBidException extends RuntimeException {
    public InvalidBidException(String message) {
        super(message);
    }
}
